# okami

./: .gitignore  CLAUDE.md  Cargo.toml  DECISIONS.md  MASTER_PLAN.md  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  fuzz.yml
examples/: bincode_exploit.rs  boundary_check.rs  cross_protocol_attempt.rs  exploit_attempt.rs  inspect_chain_cred_timestamps.rs  mutual_auth.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: delegation_chain_from_bytes.rs  pqc_credential_from_bytes.rs  signed_audit_event_from_bytes.rs  spiffe_id_parse.rs
schema/: audit-event.json
src/: audit.rs  delegation.rs  error.rs  identity.rs  lib.rs
tests/: cli_e2e.rs  proptest_tests.rs
