[package]
name = "okami-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# cargo-fuzz creates a standalone workspace so it doesn't unify features with
# the parent crate. lupine-sign >= 0.1.2 already disables ml-dsa's `pkcs8`
# default feature (the source of the nightly compile bug in ml-dsa-rc.7), so
# isolation here is defense-in-depth against future feature-unification surprises.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.okami]
path = ".."

[[bin]]
name = "delegation_chain_from_bytes"
path = "fuzz_targets/delegation_chain_from_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "spiffe_id_parse"
path = "fuzz_targets/spiffe_id_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pqc_credential_from_bytes"
path = "fuzz_targets/pqc_credential_from_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "signed_audit_event_from_bytes"
path = "fuzz_targets/signed_audit_event_from_bytes.rs"
test = false
doc = false
bench = false
